--- a/myproject/Lighthouse-mint-ui/src/config.json
+++ b/myproject/Lighthouse-mint-ui/src/config.json
@@ -13,7 +13,8 @@
             "name":"Team",
             "allowlist":[
             
-                    "sei1wmuwq63et7dc5rqzvn08sfeqyjyc0cnuf0r88w"
+                    "sei1wmuwq63et7dc5rqzvn08sfeqyjyc0cnuf0r88w",
+                    "sei1xzzq0xjkzkl9ryrd98kmmqudu0eez3y3p7tvzj"
                 
             ] 
         },
